# nolang

./: Modules.md  README.md  checks.sh  compile.sh  meson.build  pure.md  test.sh  test_rate.sh
3pp/: README.md  mpc.c
3pp/mpc/: mpc.c
examples/: argument_string.nolang  conditionals.nolang  constexample.nolang  fullexamples.nolang  generate_person.nolang  hello.nolang  import_comment.nolang  lambda.nolang  match.nolang  match2.nolang  match3.nolang  math.nolang  promises.nolang  return.nolang  simple_return.nolang  simplemath.nolang  sizes_print.nolang  structs.nolang  sum_parallel.nolang  testpass.nolang  time_in_year.nolang  variablemath.nolang
src/: assignment.hh  compiler.cpp  compiler.hh  const.hh  import.hh  methodcall.cpp  methodcall.hh  moduledef.cpp  moduledef.hh  namespacedef.cpp  namespacedef.hh  parser.cpp  parser.hh  pure.cpp  puremethod.cpp  puremethod.hh  statement.hh  struct.hh  tools.cpp  tools.hh  trim.hh  typeident.hh  variable.hh  zip.hh
src/codegen/: .cgen.cpp.swp  blockgenerator.cpp  blockgenerator.hh  cgen.cpp  cgen.hh  codegen.hh  methodcallgenerator.cpp  methodcallgenerator.hh  nativetypesolver.cpp  nativetypesolver.hh  nolangtypesolver.cpp  nolangtypesolver.hh  statementgenerator.cpp  statementgenerator.hh  typesolver.cpp  typesolver.hh
src/parsers/: argumentparser.cpp  argumentparser.hh  assignmentparser.cpp  assignmentparser.hh  baseparser.hh  constparser.cpp  constparser.hh  importparser.cpp  importparser.hh  methodcallparser.cpp  methodcallparser.hh  methodparser.cpp  methodparser.hh  namespacedefparser.cpp  namespacedefparser.hh  numberparser.cpp  numberparser.hh  structparser.cpp  structparser.hh  typeidentparser.cpp  typeidentparser.hh
test/: test.hh  test_assignmentparser.cpp  test_compiler.cpp  test_parse.cpp
